--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
 
 <body>
   <div class="calculator">
-    <div class="in"> </div>
+    <div class="display"> </div>
     <div class="numbers">
 
-        <div class="num"> 1 </div>
-        <div class="num"> 2 </div>
-        <div class="num"> 3 </div>
-        <div class="num"> 4 </div>
-        <div class="num"> 5 </div>
-        <div class="num"> 6 </div>
-        <div class="num"> 7 </div>
-        <div class="num"> 8 </div>
-        <div class="num"> 9 </div>
-        <div class="num" id = "last"> 0 </div>
+        <div class="num">1</div>
+        <div class="num">2</div>
+        <div class="num">3</div>
+        <div class="num">4</div>
+        <div class="num">5</div>
+        <div class="num">6</div>
+        <div class="num">7</div>
+        <div class="num">8</div>
+        <div class="num">9</div>
+        <div class="decimal">.</div>
+        <div class="num" id = "last">0</div>
+        <div class="percentage">%</div>
+
 
     </div>
 
@@ -30,8 +33,14 @@
       <div class="op">-</div>
       <div class="op">*</div>
       <div class="op">/</div>
-      <div class="op" id="equals">=</div>
+      <div id="equals">=</div>
 
+    </div>
+
+    <div class="extras">
+      <div class="ex" id="memory">M</div>
+      <div class="ex" id="memory-clear">MC</div>
+      <div class="ex" id="clear">C</div>
     </div>
   </div>
 
