--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
 </head>
 
 <body>
+  <h1 align="center"> Calculator </h1>
   <div class="calculator">
-    <div class="display"> </div>
+    <div class="fill">
+    <div class="display">
+      <span class="disp">
+      </span>
+    </div>
     <div class="numbers">
 
         <div class="num">1</div>
@@ -42,6 +47,8 @@
       <div class="ex" id="memory-clear">MC</div>
       <div class="ex" id="clear">C</div>
     </div>
+
+     </div>
   </div>
 
 </body>
