--- a/index.html
+++ b/index.html
@@ -10,45 +10,47 @@
   <h1 align="center"> Calculator </h1>
   <div class="calculator">
     <div class="fill">
-    <div class="display">
-      <span class="disp">
-      </span>
-    </div>
-    <div class="numbers">
+      <div class="display">
+        <span class="above">
+        </span>
+        <span class="disp">
+        </span>
+      </div>
+      <div class="numbers">
 
-        <div class="num">1</div>
-        <div class="num">2</div>
-        <div class="num">3</div>
-        <div class="num">4</div>
-        <div class="num">5</div>
-        <div class="num">6</div>
-        <div class="num">7</div>
-        <div class="num">8</div>
-        <div class="num">9</div>
-        <div class="decimal">.</div>
-        <div class="num" id = "last">0</div>
-        <div class="percentage">%</div>
+          <div class="num">1</div>
+          <div class="num">2</div>
+          <div class="num">3</div>
+          <div class="num">4</div>
+          <div class="num">5</div>
+          <div class="num">6</div>
+          <div class="num">7</div>
+          <div class="num">8</div>
+          <div class="num">9</div>
+          <div class="decimal">.</div>
+          <div class="num" id = "last">0</div>
+          <div class="percentage">%</div>
 
 
-    </div>
+      </div>
 
-    <div class="operations">
+      <div class="operations">
 
-      <div class="op">+</div>
-      <div class="op">-</div>
-      <div class="op">*</div>
-      <div class="op">/</div>
-      <div id="equals">=</div>
+        <div class="op">+</div>
+        <div class="op">-</div>
+        <div class="op">*</div>
+        <div class="op">/</div>
+        <div id="equals">=</div>
 
-    </div>
+      </div>
 
-    <div class="extras">
-      <div class="ex" id="memory">M</div>
-      <div class="ex" id="memory-clear">MC</div>
-      <div class="ex" id="clear">C</div>
-    </div>
+      <div class="extras">
+        <div class="ex" id="memory">M</div>
+        <div class="ex" id="memory-clear">MC</div>
+        <div class="ex" id="clear">C</div>
+      </div>
 
-     </div>
+       </div>
   </div>
 
 </body>
